# Storage/app.py
@@ -9,7 +9,10 @@ from sqlalchemy.orm import sessionmaker
 from base import Base
 from expense import Expense
 from income import Income
-
+from pykafka import KafkaClient
+from pykafka.common import OffsetType
+from threading import Thread
+import json
 
 
 with open("app_conf.yml", "r") as f:
@@ -33,49 +36,49 @@ DB_SESSION = sessionmaker(bind=DB_ENGINE)
 
 logger.info(f"Connecting to DB. Hostname:{conf_data['hostname']}, Port: {conf_data['port']}")
 
-def addIncome(body):
-    """ Receives an adding income event """
-    print(conf_data['user'])
-    session = DB_SESSION()
+# def addIncome(body):
+#     """ Receives an adding income event """
+    
+#     session = DB_SESSION()
 
-    bp = Income(body['user_id'],
-                body['earnings'],
-                body['deducations'],
-                body['income_category'],
-                body['income_note'],
-                body['timestamp'],
-                body['trace_id'])
+#     bp = Income(body['user_id'],
+#                 body['earnings'],
+#                 body['deducations'],
+#                 body['income_category'],
+#                 body['income_note'],
+#                 body['timestamp'],
+#                 body['trace_id'])
 
-    session.add(bp)
+#     session.add(bp)
 
-    session.commit()
-    session.close()
+#     session.commit()
+#     session.close()
 
-    outputInfoLog(body['trace_id'], 'addIncome')
-    return NoContent, 201
+#     outputInfoLog(body['trace_id'], 'addIncome')
+#     return NoContent, 201
 
 
-def addExpense(body):
-    """ Receives an adding expense event """
+# def addExpense(body):
+#     """ Receives an adding expense event """
 
-    session = DB_SESSION()
+#     session = DB_SESSION()
 
-    bp = Expense(body['user_id'],
-                body['expense'],
-                body['tax'],
-                body['expense_category'],
-                body['expense_note'],
-                body['timestamp'],
-                body['trace_id'])
+#     bp = Expense(body['user_id'],
+#                 body['expense'],
+#                 body['tax'],
+#                 body['expense_category'],
+#                 body['expense_note'],
+#                 body['timestamp'],
+#                 body['trace_id'])
 
-    session.add(bp)
+#     session.add(bp)
 
-    session.commit()
-    session.close()
+#     session.commit()
+#     session.close()
 
-    outputInfoLog(body['trace_id'], 'addExpense')
+#     outputInfoLog(body['trace_id'], 'addExpense')
 
-    return NoContent, 201
+#     return NoContent, 201
 
 def getIncome(timestamp):
     """ Gets income records after the timestamp """
@@ -114,9 +117,74 @@ def getExpense(timestamp):
     
     return results_list, 200
 
+def process_messages():
+    """ Process event messages """
+    hostname = "%s:%d" % (app_config["events"]["hostname"], app_config["events"]["port"])
+    client = KafkaClient(hosts=hostname)
+    topic = client.topics[str.encode(app_config["events"]["topic"])]
+    
+    # Create a consume on a consumer group, that only reads new messages
+    # (uncommitted messages) when the service re-starts (i.e., it doesn't
+    # read all the old messages from the history in the message queue).
+    consumer = topic.get_simple_consumer(consumer_group=b'event_group',
+                                         reset_offset_on_start=False,
+                                         auto_offset_reset=OffsetType.LATEST)
+    # This is blocking - it will wait for a new message
+    for msg in consumer:
+        msg_str = msg.value.decode('utf-8')
+        msg = json.loads(msg_str)
+        logger.info("Message: %s" % msg)
+
+        # payload = msg["payload"]
+        payload = json.loads(msg["payload"])
+        
+        if msg["type"] == "income":
+            # Store the event1 (i.e., the payload) to the DB
+           
+            session = DB_SESSION()
+            print(type(payload))
+            data = Income(payload['user_id'],
+                           payload['earnings'],
+                           payload['deducations'],
+                           payload['income_category'],
+                           payload['income_note'],
+                           payload['timestamp'],
+                           payload['trace_id'])
+
+            session.add(data)
+
+            session.commit()
+            session.close()
+            outputInfoLog(payload['trace_id'], 'addIncome')
+        
+        elif msg["type"] == "expense":
+            # Store the event2 (i.e., the payload) to the DB
+            session = DB_SESSION()
+
+            data = Expense(payload['user_id'],
+                           payload['expense'],
+                           payload['tax'],
+                           payload['expense_category'],
+                           payload['expense_note'],
+                           payload['timestamp'],
+                           payload['trace_id'])
+
+            session.add(data)
+
+            session.commit()
+            session.close()
+
+            outputInfoLog(payload['trace_id'], 'addExpense')
+
+        # Commit the new message as being read
+        consumer.commit_offsets()
+
 
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("openapi.yml", strict_validation=True, validate_responses=True)
 
 if __name__ == "__main__":
+    t1 = Thread(target=process_messages)
+    t1.setDaemon(True)
+    t1.start()
     app.run(port=8090, debug=True)
